# global-insect-wing-repository

./: .env.example  .gitignore  README.md  alembic.ini  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_image_calibration.py  0003_annotation_withdrawal.py  0004_deleted_annotation_status.py  0005_published_apis_reference_analysis.py  0006_retire_apis_v1.py  0007_specimen_sampling_metadata.py
demo_data/: README.md
demo_data/templates/: apis_standard_19_v2.json  apis_v1.json
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  EXTERNAL_REFERENCE_DATA.md  MODEL_VALIDATION.md  MORPHOMETRIC_METHODS.md  PUBLISHED_APIS_REFERENCE_ANALYSIS.md
repository_assets/: README.md
scripts/: __init__.py  bootstrap_institution.py  generate_demo_image.py  seed_demo.py
tests/: conftest.py  test_admin_workflow.py  test_annotation_workflow.py  test_approval_and_exports.py  test_bootstrap.py  test_config.py  test_coordinates.py  test_database.py  test_image_overlay.py  test_image_store.py  test_migrations.py  test_model_artifacts.py  test_morphometrics.py  test_navigation.py  test_published_apis_reference_analysis.py  test_security.py  test_seed_demo.py  test_student_pages.py  test_template_loader.py  test_template_reference.py  test_upload_workflow.py
wing_repository/: __init__.py  analysis_services.py  bootstrap.py  config.py  coordinates.py  db.py  demo_data.py  enums.py  errors.py  exports.py  image_store.py  institution_bootstrap.py  models.py  reference_data.py  security.py  services.py  template_loader.py  template_reference.py
(+25 files in other folders)
