[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "global-insect-wing-repository"
version = "0.1.0"
description = "Manual Hymenopteran right-forewing digitization and curation milestone"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "boto3>=1.34,<2",
  "numpy>=1.26,<2.5",
  "pandas>=2.2,<3",
  "Pillow>=10.3,<13",
  "psycopg[binary]>=3.1,<4",
  "pyarrow>=16,<25",
  "python-dotenv>=1.0,<2",
  "SQLAlchemy>=2.0,<3",
  "streamlit>=1.59,<2",
  "streamlit-image-coordinates==0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10",
  "pytest-cov>=5,<8",
]

[tool.setuptools.packages.find]
include = ["wing_repository*"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "postgresql: requires TEST_DATABASE_URL pointing to PostgreSQL",
]

[tool.coverage.run]
source = ["wing_repository"]
branch = true
